--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -26,6 +26,8 @@
         <text>Fix: calling contact from the archive list</text>
         <text>Update translations</text>
         <text>Update open source library list</text>
+        <text>Improvements for keeping tablets up to date</text>
+        <text>Some notification fixes</text>
     </version>
 
     <version
