--- a/api_implementation/src/main/res/values-ru/api_string.xml
+++ b/api_implementation/src/main/res/values-ru/api_string.xml
@@ -15,14 +15,14 @@
   ~ limitations under the License.
   -->
 <resources>
-    <string name="api_login">Логин</string>
-    <string name="api_signup">Войти</string>
+    <string name="api_login">Войти</string>
+    <string name="api_signup">Регистрация</string>
     <string name="api_signup_failed">Не получается войти с этого устройства, для начала нужно зарегистрировать основное устройство с номером телефона.</string>
     <string name="api_skip_signup">Или, если вы хотите использовать приложение на этом устройстве без сетевых функций, таких как набор текста с планшета или компьютера, вы можете пропустить этот шаг:</string>
     <string name="api_skip">Пропустить</string>
     <string name="api_email">"Адрес email "</string>
     <string name="api_password">Пароль</string>
-    <string name="api_forgot_password">Забыли пароль?</string>
+    <string name="api_forgot_password">Забыли пароль? ЧЗВ</string>
     <string name="api_password_confirmation">Подтверждение пароля</string>
     <string name="api_name">Имя</string>
     <string name="api_phone_number">Номер телефона</string>
@@ -41,6 +41,8 @@
     <string name="api_no_phone_number">Не введён номер телефона</string>
     <string name="api_login_error">Возникла ошибка при входе, неверный email или пароль.</string>
     <string name="api_activate_summary">Войдите, чтобы получить все ваши сообщения на это устройство!</string>
+    <string name="api_activate_1">1</string>
+    <string name="api_activate_2">2</string>
     <string name="api_activate_1_1">Отправить</string>
     <string name="api_activate_1_2">tv.klinkerapps.com</string>
     <string name="api_activate_1_3">на мобильном устройстве или ПК.</string>
@@ -49,7 +51,7 @@
     <string name="api_activate_2_3">для подключения вашего аккаунта!</string>
     <string name="api_confirm_password">Пожалуйста, подтвердите пароль:</string>
     <string name="api_wrong_password">Не удалось подтвердить. Пароль верный?</string>
-    <string name="api_email_taken">Произошла ошибка входа, у вас уже есть аккаунт с этим email?</string>
+    <string name="api_email_taken">Произошла ошибка входа, у вас уже есть учётная запись с этим email?</string>
     <string name="api_confirm">Подтвердить</string>
     <string name="api_continue">Продолжить</string>
 </resources>
