--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -17,8 +17,10 @@
 <changelog>
 
     <version
-        name="1.13.5"
-        description="January 5nd, 2017">
+        name="1.14.0"
+        description="January 9nd, 2017">
+        <text>Option to automatically delete old messages after a set time (Advanced Features)</text>
+        <text>Option to strip out unicode characters from messages</text>
         <text>Improvements for dual SIM support</text>
         <text>Mark messages as read when they are archived</text>
         <text>Handle sharing video directly, from other apps</text>
