--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -54,6 +54,7 @@
     <string name="pref_contact_global_colors_set" translatable="false">global_colors_set</string>
     <string name="pref_contact_customization_group" translatable="false">customization_group</string>
 
+    <string name="pref_notification_category" translatable="false">notification_category</string>
     <string name="pref_advanced_category" translatable="false">advanced_settings_category</string>
     <string name="pref_ringtone" translatable="false">ringtone</string>
     <string name="pref_base_theme" translatable="false">base_theme</string>
@@ -71,6 +72,7 @@
     <string name="pref_alert_types" translatable="false">alert_types</string>
     <string name="pref_wake_screen" translatable="false">wake_screen</string>
     <string name="pref_strip_unicode" translatable="false">strip_unicode</string>
+    <string name="pref_giffgaff" translatable="false">giffgaff_delivery</string>
 
     <string name="pref_secure_private_conversations" translatable="false">secure_private_conversations</string>
     <string name="pref_quick_compose" translatable="false">quick_compose</string>
