--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -21,6 +21,7 @@
         description="January 9nd, 2017">
         <text>Option to automatically delete old messages after a set time (Advanced Features)</text>
         <text>Option to strip out unicode characters from messages</text>
+        <text>Giffgaff users now have the option to use their specific delivery report format</text>
         <text>Improvements for dual SIM support</text>
         <text>Mark messages as read when they are archived</text>
         <text>Handle sharing video directly, from other apps</text>
