add delete option to the archive list multi-select

--- a/app/src/main/res/menu/action_mode_archive_list.xml
+++ b/app/src/main/res/menu/action_mode_archive_list.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_delete_conversation"
+        android:title="@string/menu_delete_conversation"
+        android:icon="@drawable/ic_delete"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/menu_archive_conversation"
         android:title="@string/menu_move_to_inbox"
         android:icon="@drawable/ic_unarchive"
