Global option to use the enter key and the send button, instead of the emoji button, on the keyboard

--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -186,7 +186,7 @@
                 android:paddingEnd="18dp"
                 android:textSize="16sp"
                 android:id="@+id/message_entry"
-                android:inputType="textCapSentences|textAutoCorrect|textMultiLine|textShortMessage"
+                android:inputType="textCapSentences|textAutoCorrect"
                 android:imeOptions="actionSend|flagNoExtractUi"
                 android:maxLines="8" />
 
