--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -189,4 +189,16 @@
         <item>5_mb</item>
     </string-array>
 
+    <string-array name="keyboard_layout">
+        <item>@string/keyboard_default</item>
+        <item>@string/keyboard_send_key</item>
+        <item>@string/keyboard_enter_key</item>
+    </string-array>
+
+    <string-array name="keyboard_layout_values">
+        <item>default</item>
+        <item>send</item>
+        <item>enter</item>
+    </string-array>
+
 </resources>
