--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -54,6 +54,7 @@
     <string name="pref_contact_global_colors_set" translatable="false">global_colors_set</string>
     <string name="pref_contact_customization_group" translatable="false">customization_group</string>
 
+    <string name="pref_customization_category" translatable="false">customization_category</string>
     <string name="pref_notification_category" translatable="false">notification_category</string>
     <string name="pref_advanced_category" translatable="false">advanced_settings_category</string>
     <string name="pref_ringtone" translatable="false">ringtone</string>
@@ -80,6 +81,7 @@
     <string name="pref_delayed_sending" translatable="false">delayed_sending</string>
     <string name="pref_cleanup_messages" translatable="false">cleanup_old_messages</string>
     <string name="pref_signature" translatable="false">signature</string>
+    <string name="pref_keyboard_layout" translatable="false">keyboard_layout</string>
 
     <string name="pref_mms_size" translatable="false">mms_size_limit</string>
     <string name="pref_override_system_apn" translatable="false">mms_override</string>
