--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -27,6 +27,7 @@
         <text>Improvements for dual SIM support</text>
         <text>Mark messages as read when they are archived</text>
         <text>Handle sharing video directly, from other apps</text>
+        <text>Improvements to location sharing</text>
         <text>Bug fixes around notifications</text>
     </version>
 
