--- a/app/src/main/res/xml/settings_mms.xml
+++ b/app/src/main/res/xml/settings_mms.xml
@@ -14,6 +14,11 @@
         android:summary="@string/send_as_mms_summary"
         android:defaultValue="true" />
 
+    <SwitchPreference
+        android:key="@string/pref_group_mms"
+        android:title="@string/use_group_mms"
+        android:defaultValue="true" />
+
     <PreferenceCategory
         android:title="@string/apn_configuration" >
 
