--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="1.15.0"
+        description="January 16th, 2017">
+        <text>Option to send group messages as SMS instead of MMS, for individual replies</text>
+    </version>
+
+    <version
         name="1.14.0"
         description="January 11th, 2017">
         <text>Option to enable swipe to delete on the conversation list (Global Settings)</text>
