--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -19,8 +19,10 @@
     <version
         name="1.15.0"
         description="January 16th, 2017">
+        <text>Option to automatically save media to the external storage, that is received in MMS messages</text>
         <text>Option to send group messages as SMS instead of MMS, for individual replies</text>
         <text>Add a "Resend" button to the notifications when messages fail to send</text>
+        <text>Improvements to syncing "MMS Configuration" settings between devices</text>
     </version>
 
     <version
