--- a/app/src/main/res/xml/settings_global.xml
+++ b/app/src/main/res/xml/settings_global.xml
@@ -16,7 +16,8 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <PreferenceCategory android:key="" android:title="@string/theme_settings">
+    <PreferenceCategory android:key="@string/pref_customization_category" 
+            android:title="@string/theme_settings">
 
         <xyz.klinker.messenger.view.AutoSummaryListPreference
             android:key="@string/pref_base_theme"
