add to changelog

--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -19,6 +19,7 @@
     <version
         name="1.15.0"
         description="January 16th, 2017">
+        <text>Option to choose the "keyboard type" under global settings</text>
         <text>Option to automatically save media to the external storage, that is received in MMS messages</text>
         <text>Option to send group messages as SMS instead of MMS, for individual replies</text>
         <text>Add a "Resend" button to the notifications when messages fail to send</text>
