go from 5 digit id matcher to a 7 digit id matcher.
The legacy version should still be completely supported though.

--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -19,9 +19,10 @@
     <version
         name="1.14.1"
         description="January 11th, 2017">
-        <text>Fixes for signatures</text>
         <text>Dismiss notifications when you swipe to archive or delete conversations</text>
         <text>Improvements to login process</text>
+        <text>Fixes for signatures</text>
+        <text>Fixes to contacts with similar phone numbers getting eaten up by other contacts</text>
     </version>
 
     <version
