group messages sent at the same time, with the same type (sent/received) with less padding

--- a/app/src/main/res/layout/message_media.xml
+++ b/app/src/main/res/layout/message_media.xml
@@ -103,6 +103,7 @@
         android:textColor="@color/secondaryText"
         android:id="@+id/timestamp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="4dp" />
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp" />
 
 </LinearLayout>
