--- a/app/src/main/res/layout/message_delivered.xml
+++ b/app/src/main/res/layout/message_delivered.xml
@@ -18,8 +18,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
     android:gravity="end"
@@ -73,6 +73,8 @@
         android:textSize="12sp"
         android:textColor="@color/secondaryText"
         android:id="@+id/timestamp"
-        android:layout_marginEnd="20dp" />
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp" />
 
 </LinearLayout>
