--- a/app/src/main/res/layout/message_sending.xml
+++ b/app/src/main/res/layout/message_sending.xml
@@ -18,8 +18,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
     android:gravity="end"
@@ -63,7 +63,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="4dp">
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp">
 
         <TextView
             android:layout_width="wrap_content"
