--- a/app/src/main/res/layout/message_delivered.xml
+++ b/app/src/main/res/layout/message_delivered.xml
@@ -46,6 +46,8 @@
             android:minWidth="@dimen/min_mms_picture_width"
             android:scaleType="centerInside"
             android:id="@+id/image"
+            android:layout_marginTop="-6dp"
+            android:layout_marginBottom="3dp"
             android:contentDescription="@string/mms_image" />
 
         <TextView
@@ -54,6 +56,8 @@
             android:maxWidth="@dimen/max_message_width"
             android:textSize="16sp"
             android:textColor="@color/primaryText"
+            android:layout_marginTop="-6dp"
+            android:layout_marginBottom="3dp"
             android:id="@+id/message" />
 
     </LinearLayout>
@@ -73,8 +77,6 @@
         android:textSize="12sp"
         android:textColor="@color/secondaryText"
         android:id="@+id/timestamp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="2dp" />
+        android:layout_marginEnd="20dp" />
 
 </LinearLayout>
