--- a/app/src/main/res/layout/message_received.xml
+++ b/app/src/main/res/layout/message_received.xml
@@ -45,6 +45,8 @@
             android:minWidth="@dimen/min_mms_picture_width"
             android:scaleType="centerInside"
             android:id="@+id/image"
+            android:layout_marginTop="-6dp"
+            android:layout_marginBottom="3dp"
             android:contentDescription="@string/mms_image" />
 
         <TextView
@@ -53,6 +55,8 @@
             android:maxWidth="@dimen/max_message_width"
             android:textSize="16sp"
             android:textColor="@android:color/white"
+            android:layout_marginTop="-6dp"
+            android:layout_marginBottom="3dp"
             android:id="@+id/message" />
 
     </LinearLayout>
