--- a/app/src/main/res/layout/message_sent_round.xml
+++ b/app/src/main/res/layout/message_sent_round.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (C) 2016 Jacob Klinker
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -63,7 +64,6 @@
         android:textColor="@color/secondaryText"
         android:id="@+id/timestamp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="2dp" />
+        android:layout_marginTop="4dp" />
 
 </LinearLayout>
