--- a/app/src/main/res/layout/message_received.xml
+++ b/app/src/main/res/layout/message_received.xml
@@ -45,8 +45,8 @@
             android:minWidth="@dimen/min_mms_picture_width"
             android:scaleType="centerInside"
             android:id="@+id/image"
-            android:layout_marginTop="-6dp"
-            android:layout_marginBottom="3dp"
+            android:layout_marginBottom="6dp"
+            android:layout_marginEnd="2dp"
             android:contentDescription="@string/mms_image" />
 
         <TextView
@@ -56,7 +56,7 @@
             android:textSize="16sp"
             android:textColor="@android:color/white"
             android:paddingTop="2dp"
-            android:paddingBottom="2dp"
+            android:paddingBottom="1dp"
             android:layout_marginTop="-6dp"
             android:layout_marginBottom="3dp"
             android:id="@+id/message" />
