--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -18,14 +18,14 @@
 
     <version
         name="1.14.1"
-        description="January 19th, 2017">
+        description="January 23th, 2017">
         <text>Dismiss notifications when you swipe to archive or delete conversations</text>
         <text>Improvements to login process</text>
         <text>Hide more information when using the system-level private notifications on the lockscreen</text>
         <text>Only scroll the message list if we are near the bottom when a new message comes in</text>
         <text>Fixes for signatures</text>
         <text>Fixes to contacts with similar phone numbers getting eaten up by other contacts</text>
-        <text>Fix some crashes</text>
+        <text>Fix various crashes</text>
     </version>
 
     <version
