change the height of the attach menu on phones landscape

--- a/app/src/main/res/values-sw600dp-land/dimens.xml
+++ b/app/src/main/res/values-sw600dp-land/dimens.xml
@@ -19,5 +19,6 @@
 
     <dimen name="header_height">160dp</dimen>
     <dimen name="header_image_top_margin">0dp</dimen>
+    <dimen name="attach_menu_height">288dp</dimen>
 
 </resources>
