default to on for the swipe to delete

--- a/app/src/main/res/xml/settings_global.xml
+++ b/app/src/main/res/xml/settings_global.xml
@@ -56,7 +56,7 @@
         <SwitchPreference
             android:key="@string/pref_swipe_delete"
             android:title="@string/swipe_delete"
-            android:defaultValue="false" />
+            android:defaultValue="true" />
 
     </PreferenceCategory>
 
