--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -24,6 +24,8 @@
         <text>Option to send group messages as SMS instead of MMS, for individual replies</text>
         <text>Add a "Resend" button to the notifications when messages fail to send</text>
         <text>Improvements to syncing "MMS Configuration" settings between devices</text>
+        <text>Some improvements for notifications</text>
+    </version>
 
     <version
         name="1.14.1"
